# latencyarb

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  requirements.txt
examples/: 01_pair_selection.py  02_backtest_pairs.py  03_risk_analysis.py  04_full_pipeline.py
src/cpp/include/: execution_engine.hpp  memory_pool.hpp  order_book.hpp  spsc_queue.hpp  types.hpp
src/cpp/src/: execution_engine.cpp  order_book.cpp  spsc_queue.cpp
src/python/: __init__.py
src/python/backtest/: __init__.py  data_handler.py  engine.py  metrics.py  monte_carlo.py  simulator.py
src/python/research/: __init__.py  cointegration.py  kalman_filter.py  mean_reversion.py  pair_selection.py  regime_detection.py
src/python/strategy/: __init__.py  pairs_strategy.py  risk_manager.py  signal_generator.py
src/python/visualization/: __init__.py  performance.py  risk_dashboard.py  signal_plots.py
tests/: __init__.py  test_backtest.py  test_cointegration.py  test_kalman.py
